--- a/ui/index.html
+++ b/ui/index.html
@@ -11,6 +11,7 @@
         <div class="center text-big bold">
             Hi! I am your webapp.
         </div>
+        <p>My first Web app</p>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
