--- a/ui/index.html
+++ b/ui/index.html
@@ -11,7 +11,8 @@
         <div class="center text-big bold">
             Hi! I am your webapp.
         </div>
-        <p>My first Web app</p>
+        <p>
+            <align-center>My first Web app</align-center></p>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
