[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -10,9 +10,9 @@
         <br>
         <div class="center text-big bold">
             Hi! I am your webapp.
+            My first web app
         </div>
-        <p>
-            <align-center>My first Web app</align-center></p>
+        
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
