--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,2 +1,22 @@
 <html>
+    <head>
+        <title>
+            Article one
+        </title>
+    </head>
+    <body>
+        <div>
+            <a href="/">Home</a>
+        </div>
+        <br/>
+        <h3>
+            Article one
+        </h3>
+        <div>
+            Sep 5.2016
+        </div>
+        <p>
+            This is the content of my first web page
+        </p>
+    </body>
 </html>
