[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -3,8 +3,18 @@
         <title>
             Article one
         </title>
+        <style>
+            .cont{
+                font-family:Arial ;
+                margin: 0 auto;
+                max-width: 800px;
+                color:grey;
+                
+            }
+        </style>
     </head>
     <body>
+        <div class="cont">
         <div>
             <a href="/">Home</a>
         </div>
@@ -19,4 +29,5 @@
             This is the content of my first web page
         </p>
     </body>
+    </div>
 </html>
