--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -3,8 +3,18 @@
         <title>
             Article three
         </title>
+         <style>
+            .cont{
+                font-family:Arial ;
+                margin: 0 auto;
+                max-width: 800px;
+                color:grey;
+                
+            }
+        </style>
     </head>
     <body>
+        <div class="cont">
         <div>
             <a href="/">Home</a>
         </div>
@@ -18,6 +28,7 @@
         <p>
             This is the content of my third  web page
         </p>
+        </div>
     </body>
 </html>
 
