[imad-console] Updates ui/article-two.html

--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -3,9 +3,19 @@
         <title>
             Article two
         </title>
+         <style>
+            .cont{
+                font-family:Arial ;
+                margin: 0 auto;
+                max-width: 800px;
+                color:grey;
+                
+            }
+        </style>
     </head>
     <body>
-        <div>
+        <div class="cont">
+            <div>
             <a href="/">Home</a>
         </div>
         <br/>
@@ -18,6 +28,7 @@
         <p>
             This is the content of my second web page
         </p>
+        </div>
     </body>
 </html>
 
