[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -9,6 +9,7 @@
                 margin: 0 auto;
                 max-width: 800px;
                 color:grey;
+                background-color:light-blue;
                 
             }
         </style>
