[imad-console] Updates ui/article-two.html

--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -5,10 +5,14 @@
         </title>
          <style>
             .cont{
-                font-family:Arial ;
+                
+                font-family: Arial;
                 margin: 0 auto;
                 max-width: 800px;
-                color:grey;
+                color: grey;
+                padding-top: 70;
+                padding-left: 30;
+                padding-right: 30;
                 
             }
         </style>
