[imad-console] Updates ui/article-three.html

--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -5,11 +5,14 @@
         </title>
          <style>
             .cont{
-                font-family:Arial ;
-                margin: 0 auto;
-                max-width: 800px;
-                color:grey;
                 
+             font-family: Arial;
+             margin: 0 auto;
+             max-width: 800px;
+             color: grey;
+             padding-top: 70;
+             padding-left: 30;
+             padding-right: 30;
             }
         </style>
     </head>
