[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -3,18 +3,7 @@
         <title>
             Article one
         </title>
-        <style>
-            .cont{
-                
-                font-family: Arial;
-                margin: 0 auto;
-                max-width: 800px;
-                color: grey;
-                padding-top: 70;
-                padding-left: 30;
-                padding-right: 30;
-            }
-        </style>
+<link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
         <div class="cont">
