--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -3,19 +3,7 @@
         <title>
             Article two
         </title>
-         <style>
-            .cont{
-                
-                font-family: Arial;
-                margin: 0 auto;
-                max-width: 800px;
-                color: grey;
-                padding-top: 70;
-                padding-left: 30;
-                padding-right: 30;
-                
-            }
-        </style>
+        <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
         <div class="cont">
