--- a/ui/index.html
+++ b/ui/index.html
@@ -12,7 +12,9 @@
             Hi! I am your webapp.
             My first web app
         </div>
-        
+        <script>
+            alert('Hi, I'm javascript!');
+        </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
