--- a/ui/index.html
+++ b/ui/index.html
@@ -13,7 +13,7 @@
             My first web app
         </div>
         <script>
-            alert('Hi, I'm javascript!');
+            alert('Hi, I\'m javascript!');
         </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
