--- a/ui/index.html
+++ b/ui/index.html
@@ -4,18 +4,26 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div class="center">
-            <img id='madi' src="/ui/madi.png" class="img-medium"/>
-        </div>
-        <br>
-        <div id='main-text' class="center text-big bold">
-            Hi! I am your webapp.
-            My first web app
-        </div>
-        <script>
-            alert('Hi, I\'m javascript!');
-        </script>
-        <script type="text/javascript" src="/ui/main.js">
-        </script>
+            <div class="container">
+            <div class="center">
+                <img id='madi' src="https://www.pexels.com/photo/nature-red-love-romantic-67636/" class="img-medium"/>
+            </div>
+            <hr/>
+            <br>
+            <h3>Personal</h3>
+            <div>
+                Hi. My name is Santhanalakshmi
+            </div>
+            <hr/>
+            <h3>Professional</h3>
+            <div>
+                I do computer Engineering
+            </div>
+            <hr/>
+            <div class="footer">
+            </div>
+            </div>
+            <script type="text/javascript" src="/ui/main.js">
+            </script>
     </body>
 </html>
