[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -6,7 +6,7 @@
     <body>
             <div class="container">
             <div class="center">
-                <img id='madi' src="https://www.pexels.com/photo/nature-red-love-romantic-67636/" class="img-medium"/>
+                <img id='madi' src="https://static.pexels.com/photos/67636/rose-blue-flower-rose-blooms-67636.jpeg" class="img-medium"/>
             </div>
             <hr/>
             <br>
